syntax = "proto3";

package cache;

option go_package = "pavankramadugu.hypercdn/m/cache";

service CacheService {
  rpc Get(GetRequest) returns (GetResponse) {}
  rpc Set(SetRequest) returns (SetResponse) {}
  rpc Delete(DeleteRequest) returns (DeleteResponse) {}
}

message GetRequest {
  string userId = 1;
  string key = 2;
}

message GetResponse {
  bytes value = 1;
}

message SetRequest {
  string userId = 1;
  string key = 2;
  bytes value = 3;
  int32 expiration = 4;
}

message SetResponse {
  bool success = 1;
}

message DeleteRequest {
  string userId = 1;
  string key = 2;
}

message DeleteResponse {
  bool success = 1;
}